<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>er_ros2_example_package</name>
  <version>0.1.0</version>
  <description>ROS2 Exmample Template Package to start directly your development</description>
  <maintainer email="explainingrobotics@outlook.com">explainingrobotics</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rcpputils</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>example_interfaces</depend>
  <depend>eigen3</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
